home page card image stretch fix

--- a/src/app/components/events-list/events-list.component.scss
+++ b/src/app/components/events-list/events-list.component.scss
@@ -1,3 +1,16 @@
+
+@media(max-width: 567px) {
+  ::ng-deep .owl-stage-outer {
+    padding: 0% !important;
+    margin-left: 3.5% !important;
+  }
+}
+
+// ::ng-deep .owl-carousel-child {
+//   margin: 0px !important;
+// }
+
+
 span.title {
   font-size: 12px;
 }
@@ -125,7 +138,7 @@ ul.nav {
 
 @media (min-width: 1200px) {
   .ev-head-padl {
-    padding-left: 1.1% !important;
+    padding-left: 0% !important;
   }
 }
 
@@ -373,6 +386,39 @@ ul.nav {
 
 @media(min-width: 1500px) {
   p.card-text {
-    min-height: 10vh !important;
+    min-height: 12vh !important;
   }
 }
+
+@media(min-width: 567px) {
+  ::ng-deep .row {
+    --bs-gutter-x:  1. !important;
+  }
+  ::ng-deep .owl-carousel-child {
+      margin: 0px !important;
+    }
+    
+}
+
+.img-fit-img-fix-background-cover {
+  border-radius: 10px;
+	background-position: 50%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+}
+
+.price-span {
+    position: absolute;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.41);
+    backdrop-filter: blur(5px);
+    bottom: .5px;
+    padding: 5px 10px;
+    font-size: 12px;
+    border-end-end-radius: 10px;
+    color: #fff;
+    border-start-start-radius: 7px;
+}
+
+
